# rust_my_structure

./: .env  Cargo.toml  Dockerfile  README.md  diesel.toml  makefile
migrations/2025-09-11-070629_create_users/: up.sql
migrations/2025-09-12-032522_add_work_unit_to_users/: up.sql
src/: main.rs  schema.rs
src/app/: mod.rs
src/app/app1/: mod.rs
src/app/app1/controller/: controller.rs
src/app/app1/models/: mod.rs
src/app/app1/repository/: users.rs
src/base/: mod.rs
src/base/databases/: mod.rs
src/base/responses/: mod.rs
src/base/route/: route.rs
src/helpers/: mod.rs  route_logger.rs
